--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.1",
     "next": "12.1.0",
+    "next-sanity": "^0.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "scss": "^0.2.4"
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "eslint": "8.10.0",
